# cmake-poc

./: CMakeLists.txt  README.md
src/app/: CMakeLists.txt  makesearchable.c
src/lib/: CMakeLists.txt  searchableutils.c
